tsystem/tcache-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    ID: ""
    Version: ""
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: tcache
  name: tcache
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: tcache
status:
  loadBalancer: {}
