tsystem/tsystem-api.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tsystem-api
spec:
  serviceName: tsystem-api
  selector:
    matchLabels:
      app: tsystem-api
  replicas: 2 
  template:
    metadata:
      labels:
        app: tsystem-api
    spec:
      containers:
      - name: tsystem-api
        image: transpara/tsystem:0.144.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: tsystem-api-data
          mountPath: /app/database
      imagePullSecrets:
        - name: transpara-docker-secret
  volumes:
  - name: tsystem-api-data
    persistentVolumeClaim:
      claimName: tsystem-api-data-claim
---

apiVersion: v1
kind: Service
metadata:
  name: tsystem-api
spec:
  selector:
    app: tsystem-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
