tsystem/tsystem-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    ID: ""
    Version: ""
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: tsystem
  name: tsystem
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: tsystem
status:
  loadBalancer: {}
